Issue #106: Add collapse/expand widget to Repositories and Software Update
This commit adds Bootstrap collapse and Wok Accordion classes to Repositories and Software Update panels.
It also fixes some minor styling issues removing inline styles.

--- a/ui/css/gingerbase.css
+++ b/ui/css/gingerbase.css
@@ -24,8 +24,7 @@
   padding-right: 0;
 }
 
-.container:before,
-.container:after {
+.container:before, .container:after {
   content: " ";
   display: table;
 }
@@ -61,8 +60,7 @@
   padding-right: 0;
 }
 
-.container-fluid:before,
-.container-fluid:after {
+.container-fluid:before, .container-fluid:after {
   content: " ";
   display: table;
 }
@@ -76,9 +74,7 @@
   margin-right: 0;
 }
 
-.row:before,
-#host-info-container .basic-information-list:before,
-.row:after, #host-info-container .basic-information-list:after {
+.row:before, #host-info-container .basic-information-list:before, .row:after, #host-info-container .basic-information-list:after {
   content: " ";
   display: table;
 }
@@ -906,10 +902,6 @@
   #software-update-section {
     margin: 0 0 14px 0;
   }
-}
-
-#repositories-section {
-  border-bottom: 1px solid #444;
 }
 
 #repositories-grid .wok-list-content,
