--- a/ui/css/src/modules/_host.scss
+++ b/ui/css/src/modules/_host.scss
@@ -152,10 +152,6 @@
     }
 }
 
-#repositories-section {
-    border-bottom: 1px solid $gray;
-}
-
 #repositories-grid,
 #available-reports-grid {
     .wok-list-content {
